--- a/NewsOnline.html
+++ b/NewsOnline.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <title>NewsOnline</title>
-
 </head>
 
 <body>
@@ -15,7 +16,10 @@
             <div class="main-title">NewsOnline</div>
             <div class="imp-notice">
                 <h3>Important Note:</h3>
-                <p>Before beginning the installation process, please make sure you're using latest version of WordPress and our theme.</p>
+                <p>Ne vous contentez d'ailleurs pas de bonnes résolutions ("l'an prochain, c'est décidé, j'apprends mes cours dès le
+                début'"), mais mettez en place les moyens concrets qui vous ont manque pour réussir. Emploi-du-temps, lecture, travail,
+                nouvelles habitudes de vie...
+                </p>
             </div>
             <p class="higher">
                 <strong>Support Forum:</strong> <a href="" target="_blank">Ask a Question</a>
@@ -28,32 +32,32 @@
             <img src="img/theme.png" />
         </div>
     </div>
- 
+
 
     <footer>
         <div class="container">
-            <a class="twitter-timeline" href="https://twitter.com/EdmanManigat" data-chrome="nofooter noheader transparent" data-widget-id="363331291422281729">Tweets by @MyThemeShopTeam</a>
+            <a class="twitter-timeline" href="https://twitter.com/EdmanManigat" data-chrome="nofooter noheader transparent"
+                data-widget-id="363331291422281729">Tweets by @EdmanManigat</a>
             <script>
-            ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                    p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = p + "://platform.twitter.com/widgets.js";
-                    fjs.parentNode.insertBefore(js, fjs);
-                }
-            }(document, "script", "twitter-wjs");
+                ! function (d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0],
+                        p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + "://platform.twitter.com/widgets.js";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, "script", "twitter-wjs");
             </script>
-            <p>&copy; MyThemeShop 2014. All rights reserved.</p>
+            <p>© 2018 EdmanDev All Rights Reserved</p>
         </div>
 
 
     </footer>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> -->
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
-
 </html>
